--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "YouTube streaming application with web UI",
   "module": "index.ts",
   "type": "module",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "ts-node index.ts",
+    "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node index.ts"
   },
   "dependencies": {
